<resources>
    <string name="app_name">Расписание</string>
    <string name="favorite_schedules">Между внесенными в этот список группами вы сможете мгновенно переключатся, не набирая конкретных имен в поиске.</string>
    <string name="registrationLabel">Регистрация</string>
    <string name="loginHint">Логин</string>
    <string name="passHint">Пароль</string>
    <string name="registerText">Зарегистрироваться</string>
    <string name="entranceLabel">Вход</string>
    <string name="enterText">Войти</string>
    <string name="okText">Готово</string>
    <string name="numGroupAndTeacherText">Номер группы или имя преподавателя</string>
    <string name="saveText">Сохранить</string>
    <string name="addNewFavSchedText">Добавить расписание</string>

    <string-array name="num_of_week_abbr">
        <item>ПН</item>
        <item>ВТ</item>
        <item>СР</item>
        <item>ЧТ</item>
        <item>ПТ</item>
        <item>СБ</item>
    </string-array>

    <string-array name="num_of_week_full">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>

    <string-array name="num_of_couple">
        <item>Первая пара</item>
        <item>Вторая пара</item>
        <item>Третья пара</item>
        <item>Четверная пара</item>
        <item>Пятая пара</item>
        <item>Шестая пара</item>
        <item>Седьмая пара</item>
    </string-array>
</resources>