<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorWhite">


    <TextView
        android:id="@+id/tvEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopLabel"
        android:text="@string/entranceLabel"
        android:textSize="@dimen/textSizeLabels"
        android:textColor="?attr/colorGray90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginVerB"
        android:layout_marginHorizontal="@dimen/marginHor"
        android:hint="@string/loginHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnter">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize1"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginHor"
        android:layout_marginTop="@dimen/marginVerS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:hint="@string/passHint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize1"
            android:inputType="textPassword"
            android:maxLines="1"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginHor"
        android:layout_marginTop="@dimen/marginVerB"
        android:text="@string/enterText"
        android:textSize="@dimen/textSize1"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginHor"
        android:text="@string/registrationLabel"
        android:textSize="@dimen/textSize1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEnter"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>